objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <formula>Service_Rep__r.EmployeeNumber</formula>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Id</field>
                <operation>equals</operation>
                <valueField>$User.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Minutes__c</fullName>
        <label>Time Spent (Minutes)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Troubleshooting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{0}</displayFormat>
        <label>Time Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>